fix: apply minor polishes

--- a/docs/release-notes/5.15.0/changelog.mdx
+++ b/docs/release-notes/5.15.0/changelog.mdx
@@ -16,14 +16,23 @@ Please check the [Webiny 5.15.0 migration guide](/docs/release-notes/5.15.0/upgr
 
 :::
 
+:::note
+The majority of changes that were introduced in this release are related to the [Amazon DynamoDB](https://aws.amazon.com/dynamodb/)-only version of Webiny.
+:::
+
+:::tip  Amazon DynamoDB-only version of Webiny
+[In case you missed it](/docs/key-topics/cloud-infrastructure/api/introduction), at the moment, Webiny relies on both [Amazon DynamoDB](https://aws.amazon.com/dynamodb/) and [Amazon OpenSearch Service](https://aws.amazon.com/opensearch-service/the-elk-stack/what-is-elasticsearch/) databases in order to store and retrieve data. And while this is definitely a good choice for larger projects, for smaller and mid-sized projects, we'll be introducing an Amazon DynamoDB-only version of Webiny. For now there are no official estimates when this will be available, but we can definitely say that a very big amount of work has already been done.
+:::
+
+
 ## Page Builder
 
 ### Storage Operations ([#1872](https://github.com/webiny/webiny-js/pull/1872))
 
-We extracted existing DynamoDB + Elasticsearch storage logic into `@webiny/api-page-builder-so-ddb-es` package.
+We extracted existing DynamoDB + Elasticsearch storage logic into [`@webiny/api-page-builder-so-ddb-es`](https://github.com/webiny/webiny-js/tree/next/packages/api-page-builder-so-ddb-es) package.
 This allows us to create package that stores the data into DynamoDB only, or some other database.
 
-We moved `SearchPagesPlugin`, `SearchLatestPagesPlugin` and `SearchPublishedPages` from `@webiny/api-page-builder` to `@webiny/api-page-builder-so-ddb-es`.
+We moved `SearchPagesPlugin`, `SearchLatestPagesPlugin` and `SearchPublishedPages` from [`@webiny/api-page-builder`](https://github.com/webiny/webiny-js/tree/next/packages/api-page-builder) to [`@webiny/api-page-builder-so-ddb-es`](https://github.com/webiny/webiny-js/tree/next/packages/api-page-builder-so-ddb-es).
 
 ### GraphQL
 ##### Common changes
@@ -45,14 +54,14 @@ meta {
 
 
 ### Prerendering
-We extracted prerendering logic into separate file, `@webiny/api-page-builder/prerendering`, so it is now imported into `api/code/graphql/src/index.ts` file. If you do not want to use prerendering of pages, feel free to remove it from that file.
+We extracted prerendering logic into separate file, [`@webiny/api-page-builder/prerendering`](https://github.com/webiny/webiny-js/tree/next/packages/api-page-builder/src/prerendering), so it is now imported into [`api/code/graphql/src/index.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/code/graphql/src/index.ts#L11) file. If you do not want to use prerendering of pages, feel free to remove the referenced import statement.
 
 
 ## Elasticsearch
 
 ### Query Modifier Plugin ([#1872](https://github.com/webiny/webiny-js/pull/1872))
-Due to changes in the way of how query building for Elasticsearch works we changed `ElasticsearchQueryModifierPlugin` in the `@webiny/api-elasticsearch` package.
-It is an abstract class now, so if you used it to modify the query, please change it to either `PageElasticsearchQueryModifierPlugin` for `@webiny/api-page-builder` or `FileElasticsearchQueryModifierPlugin` for `@webiny/api-file-manager`.
+Due to changes in the way of how query building for Elasticsearch works we changed `ElasticsearchQueryModifierPlugin` in the [`@webiny/api-elasticsearch`](https://github.com/webiny/webiny-js/tree/next/packages/api-elasticsearch) package.
+It is an abstract class now, so if you used it to modify the query, please change it to either `PageElasticsearchQueryModifierPlugin` for [`@webiny/api-page-builder`](https://github.com/webiny/webiny-js/tree/next/packages/api-page-builder) or `FileElasticsearchQueryModifierPlugin` for [`@webiny/api-file-manager`](https://github.com/webiny/webiny-js/tree/next/packages/api-file-manager).
 Also, in that abstract class, method named `apply` was renamed to `modifyQuery`.
 
 ### Body And Sort Modifier Plugins ([#1872](https://github.com/webiny/webiny-js/pull/1872))
