fix: add new items

--- a/docs/release-notes/5.15.0/changelog.mdx
+++ b/docs/release-notes/5.15.0/changelog.mdx
@@ -73,10 +73,21 @@ For Page Builder check out `PageElasticsearchBodyModifierPlugin` and `PageElasti
 For File Manager check out  `FileElasticsearchBodyModifierPlugin` and `FileElasticsearchSortModifierPlugin` classes.
 
 
-## Headless CMS ([#1872](https://github.com/webiny/webiny-js/pull/1872))
+## Headless CMS
+
+### Reference Field - Fixed Order of Entries ([`#1922`](https://github.com/webiny/webiny-js/pull/1922), [@nelsonchen5](https://github.com/nelsonchen5))
+
+When consuming content via the **read** Headless CMS GraphQL API, the reference fields that might have been included in the GraphQL query would return entries in an incorrect order. From now on, this is no longer the case.
+
+A special shout out to [@nelsonchen5](https://github.com/nelsonchen5) for sorting this out! ❤️
+
+:::tip
+Learn more about different types of the Headless CMS GraphQL API in [this key topic](/docs/key-topics/webiny-applications/headless-cms/graphql-api).
+:::
+
+### `ElasticsearchFieldPlugin` Class Not Used Anymore ([#1872](https://github.com/webiny/webiny-js/pull/1872))
 
 The definition of Elasticsearch field now uses `CmsEntryElasticsearchFieldPlugin` class instead of `ElasticsearchFieldPlugin`.
-
 
 ## File Manager ([#1912](https://github.com/webiny/webiny-js/pull/1912))
 
@@ -84,3 +95,11 @@ The definition of Elasticsearch field now uses `CmsEntryElasticsearchFieldPlugin
 Fixed a bug with missing `where` parameter in the `listFiles` query. Also added the `tag_and_in` option to where so users can search for files that contain all given tags.
 
 Also note that `types`, `tags`, `ids` and `search` parameters in `listFiles` query are deprecated. Use the `where` parameter instead.
+
+## Development
+
+### Webiny CLI - `--help` Argument Now Works as Expected ([#1926](https://github.com/webiny/webiny-js/pull/1926), [@snstanton](https://github.com/snstanton))
+
+When using the Webiny CLI, the `--help` argument now works as expected.
+
+Special thanks to [@snstanton](https://github.com/snstanton) for taking care of this! ️️❤️
