fix: remove code formatting

--- a/docs/release-notes/5.15.0/changelog.mdx
+++ b/docs/release-notes/5.15.0/changelog.mdx
@@ -75,7 +75,7 @@ For File Manager check out  `FileElasticsearchBodyModifierPlugin` and `FileElast
 
 ## Headless CMS
 
-### Reference Field - Fixed Order of Entries ([`#1922`](https://github.com/webiny/webiny-js/pull/1922), [@nelsonchen5](https://github.com/nelsonchen5))
+### Reference Field - Fixed Order of Entries ([#1922](https://github.com/webiny/webiny-js/pull/1922), [@nelsonchen5](https://github.com/nelsonchen5))
 
 When consuming content via the **read** Headless CMS GraphQL API, the reference fields that might have been included in the GraphQL query would return entries in an incorrect order. From now on, this is no longer the case.
 
