--- a/docs/tutorials/create-custom-application/serverless-application-development.mdx
+++ b/docs/tutorials/create-custom-application/serverless-application-development.mdx
@@ -38,8 +38,18 @@ For new developers and developers who haven't had the chance to work with server
 So, before we start building our application, let's quickly outline some of the differences between the serverless and _traditional_ application development and, on a high level, what can we expect to encounter when starting out with serverless application development.
 
 :::tip
-Want to learn more about serverless? Check out our [Serverless Guide](https://www.webiny.com/serverless-knowledge-base/serverless)!
+Want to learn more about serverless? Check out our [Serverless Knowledge Base](https://www.webiny.com/serverless-knowledge-base/serverless)!
 :::
+
+## TLDR
+
+If you'd just like to get a short TLDR (too long; didn't read) and immediately [start with the tutorial](/docs/tutorials/create-custom-application/getting-started), here it is:
+
+- essentially, backend local development is no longer possible - if our code interacts with a cloud infrastructure resource, we'll need to deploy it in order to ensure everything works as expected
+- cloud infrastructure code makes deployments much easier - no manual steps needed (for example, clicking through the [AWS Management Console](https://aws.amazon.com/console/))
+- cloud infrastructure and its code are as important as your application code
+- developers don't have to be _scared_ or try to avoid understanding how the application works on the cloud infrastructure level
+- the fact that serverless cloud infrastructure resources are charged based on usage and not uptime, makes the whole [developing in the cloud](/docs/tutorials/create-custom-application/serverless-application-development#developing-in-the-cloud) proposition an even more attractive option
 
 ## Developing in the Cloud
 
@@ -49,11 +59,9 @@ With these technologies, developers start different backend services, APIs, and 
 
 That being said, the main difference between _traditional_ and serverless application development is that you can't really do that anymore. This is because serverless services often cannot be run on your local machine, they only exist in the cloud. Some of the examples are [Amazon API Gateway](https://aws.amazon.com/api-gateway/), [Amazons SQS](https://aws.amazon.com/sqs/), [Amazon Cognito](https://aws.amazon.com/cognito/), and so on.
 
-Sure, there are different utilities that try to emulate the cloud and, sort of, enable local development. But the main problem with these solutions is that they can't really keep pace with the developments happening in different clouds, and most importantly, will never be able to 100% emulate the actual service. This poses a problem because, while developing your application, it might seem everything works. But, when you deploy your application into the cloud, different issues may start to occur.
+Sure, there are different utilities that try to emulate the cloud and, sort of, enable local development. But, the main problem with these solutions is that they can't really keep pace with the developments happening in different clouds, and most importantly, will never be able to 100% emulate the actual service. This poses a problem because, while developing your application, it might seem everything works. But, when you deploy your application into the cloud, different issues may start to occur.
 
-These are some of the reasons why Webiny advocates developing in the cloud and not locally, within the developer's machine. As we'll see, as soon as our application starts relying on additional cloud infrastructure resources, we'll need to deploy them.
-
-The same goes when it comes to writing integration and end-to-end (E2E) tests, which are being executed against real services deployed into our cloud (AWS) account. No local emulations or running services are being used.
+These are some of the reasons why Webiny advocates developing in the cloud and not locally, within the developer's machine. As we'll see, as soon as our application starts relying on additional cloud infrastructure resources, we'll need to deploy them. The same goes when it comes to writing integration or end-to-end (E2E) tests, which will be executed against real services deployed into our cloud (AWS) account.
 
 ## Application and Cloud Infrastructure Code
 
@@ -69,7 +77,7 @@ Manually configuring and deploying these is hard, especially when talking about 
 - essentially, by reading the code, we can get a good sense of what's used by our application
 - and more
 
-In this tutorial, we'll get to chance to work with both types of code, so you'll be able to get a better feel of how it all works together.
+In this tutorial, we'll get to chance to work with both types of code, so we'll be able to get a better feel of how it all works together.
 
 :::tip
 To deploy necessary cloud infrastructure, by default, Webiny relies on Pulumi, a modern infrastructure as code framework. To learn more, check out the [IaC with Pulumi](/docs/key-topics/deployment/iac-with-pulumi) key topic.
@@ -81,9 +89,9 @@ Usually, in _traditional_ application development, developers are exclusively re
 
 With serverless development, since the developers are now empowered to deploy cloud infrastructure resources and services in order to get the job done, the line between development and DevOps teams starts to blur a bit.
 
-With that in mind, the point we're trying to highlight here is: as a developer, you don't have to be _scared_ or try to avoid understanding how the application works on the cloud infrastructure level. Application code and cloud infrastructure are equally important in delivering the application you're building.
+With that in mind, the main point we're trying to make here is: as a developer, you don't have to be _scared_ or try to avoid understanding how the application works on the cloud infrastructure level. Application code and cloud infrastructure are equally important in delivering the application you're building.
 
-Sooner or later, you'll be faced with a task that will require you to introduce additional cloud infrastructure resource(s) into the mix. Sure, it's definitely not required of developers to know everything about every available cloud infrastructure resource out there, but, having at least the basic knowledge of how our application works on the cloud infrastructure level definitely can't hurt.
+Sooner or later, you'll be faced with a task that will require you to introduce additional cloud infrastructure resource(s) into the mix. Sure, it's definitely not required of us to know everything about every available cloud infrastructure resource out there, but, having at least the basic knowledge of how our application works on the cloud infrastructure level definitely can't hurt.
 
 Let's end this section with the following excerpt from this [Serverless is DevOps](https://www.stackery.io/blog/erverless-is-devops/) blog post:
 
@@ -95,7 +103,7 @@ One of the main advantages of serverless cloud infrastructure resources is their
 
 This goes hand in hand with serverless application development and everything we've outlined in the previous sections. In case the uptime-based pricing was used, developers' lives would be significantly harder because they would often get charged for things they potentially didn't even use that much. With serverless, zero usage means zero cost as well.
 
-Furthermore, on top of the consumption-based pricing, today, different cloud infrastructure resources often include a solid free-tier. In other words, completely free consumption until a certain threshold has been reached. This makes the whole [developing in the cloud](/docs/tutorials/create-custom-application/serverless-application-development#developing-in-the-cloud) proposition an even more attractive option.
+Furthermore, on top of the consumption-based pricing, today, different cloud infrastructure resources often include a solid free tier. In other words, completely free consumption until a certain threshold has been reached. Ultimately, this is what makes the whole [developing in the cloud](/docs/tutorials/create-custom-application/serverless-application-development#developing-in-the-cloud) proposition an even more attractive option.
 
 :::caution
 Before deploying additional cloud infrastructure resources, make sure to understand how they are priced. Consult with your team members if you're unsure what impact the deployment might make.
