wip: create custom application tutorial

--- a/docs/tutorials/create-custom-application/getting-started.mdx
+++ b/docs/tutorials/create-custom-application/getting-started.mdx
@@ -135,7 +135,7 @@ Since two separate project applications were created in the scaffolding process,
 
 The following command will start a new watch session on our GraphQL API application code:
 
-```
+```bash
 yarn webiny watch pinterest-clone/api --env dev
 ```
 
@@ -147,7 +147,7 @@ Running the `yarn webiny output pinterest-clone/api --env dev` command from your
 
 The following command will start a new watch session on our React application code:
 
-```
+```bash
 yarn webiny watch pinterest-clone/app --env dev
 ```
 
@@ -163,13 +163,39 @@ In contrast to [GraphQL API](/docs/tutorials/extend-admin-area/getting-started#g
 
 Note that we need to specify the environment via the `--env` flag, even when watching the React application. This is because the [`watch`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/02-getting-started/pinterest-clone/app/code/webiny.config.ts#L21) and [`build`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/02-getting-started/pinterest-clone/app/code/webiny.config.ts#L31) scripts need to pick up some of the values exported from GraphQL API's cloud infrastructure code, for a specific environment. For example, in order to interact with the GraphQL API, the React application needs to know its URL. Since we could potentially have our GraphQL API deployed into several environments, we need to specify it.
 
+:::tip
+When we say _scripts need to pick up some of the values exported from GraphQL API's cloud infrastructure code_, we actually mean they need to retrieve our GraphQL API project application's **stack output**. We'll revisit this term in one of the following sections, so you'll be able to get a better understanding of how it actually works.
+:::
+
 ### Final Result
 
 The following screenshot shows the two [`webiny watch`](/docs/how-to-guides/use-watch-command) commands run side-by-side in two separate terminal sessions:
 
 <CenteredImage alt="Watching GraphQL API and React Application" src={watchCommands}/>
 
-Once the two watch sessions have been started, we can start building our application. In the next section, we'll start by extending the GraphQL API with a basic set of [CRUD](https://en.wikipedia.org/wiki/Create,_read,_update_and_delete) GraphQL query and mutation operations.
+## Deployments
+
+If, at any point, we just wanted to deploy our GraphQL API or React application, we can do that with the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command.
+
+### GraphQL API
+
+To deploy our GraphQL API, we can use the following command:
+
+```bash
+yarn webiny deploy pinterest-clone/api --env dev
+```
+
+### React Application
+
+To deploy our React application, we can use the following command:
+
+```bash
+yarn webiny deploy pinterest-clone/app --env dev
+```
+
+## Environments
+
+Note that, throughout the whole tutorial, we'll be using `dev` as the environment into which we'll deploy our GraphQL API and React application.
 
 ## FAQ
 
@@ -180,3 +206,7 @@ The generated GraphQL API application code relies exclusively on [Amazon DynamoD
 #### Do I need to deploy the created React application in order to continue development?
 
 No. As mentioned above, frontend application development can still be performed locally, on the developer's machine. You only deploy the application when you need to have it online.
+
+#### Into which environment the GraphQL API was deployed?
+
+During the Full Stack Application scaffold's setup, we get to decide whether we want to immediately deploy the newly created GraphQL API or not. If we choose yes, the GraphQL API will automatically be deployed into the `dev` environment.
