--- a/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-client.mdx
+++ b/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-client.mdx
@@ -141,12 +141,7 @@ And although, as far as the actual React application development is concerned, t
 
 For example, the Hosted UI authentication flow, which we're trying to implement here, can only be accessed with a valid User Pool Client. This means that, in order to use it in our React application and actually test the authentication flow, we need to deploy it.
 
-To some, this may come up as a bit of a surprise. For now, just note that with serverless and "cloud-native" application development, these kinds of situations are not unusual.
-
-So, in order to deploy our React application, we can run the following command:
-
-STOP WATCH IF YOU HAD ANY - TODO
-DEPLOYMENTS ? 2 DEPLOYS ?
+So, in order to do that, we can run the following command:
 
 ```bash
 yarn webiny deploy pinterest-clone/app --env dev --no-build
@@ -154,12 +149,13 @@ yarn webiny deploy pinterest-clone/app --env dev --no-build
 
 Notice the `--no-build` argument at the end of the command. With it, we've instructed the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command to not worry about our React application, and just ensure that the supporting cloud infrastructure resources are deployed. Furthermore, note that this will not only deploy the newly defined User Pool Client, but also other already defined resources - a [CloudFront distribution](#) and an [Amazon S3 bucket](#).
 
-
 <CenteredImage
   alt="Initial deployment of Cloud Infrastructure"
   style={{ maxWidth: 750 }}
   src={cloudInfraDeploy}
 />
+
+TODO - DEPLOYMENTS ? 2 DEPLOYS NEEDED?
 
 ## Final Result
 
