--- a/docs/tutorials/create-custom-application/security/cloud-infrastructure/adjusting-webiny-config-ts.mdx
+++ b/docs/tutorials/create-custom-application/security/cloud-infrastructure/adjusting-webiny-config-ts.mdx
@@ -42,8 +42,12 @@ The code that we cover in this section can also be found in our GitHub [examples
 
 There's one additional step we need to complete before we can finally start working on our React application code, and that's adjusting its [`webiny.config.ts`](#) configuration file, located in [`pinterest-clone/app/code`](#) folder. This is where we'll finally use all of the stack output properties that we've added in GraphQL API and React application cloud infrastructure code, and pass them as environment variables to our React application.
 
-:::caution
-In order to continue with this and the following sections of the tutorial, all of the cloud infrastructure additions we did in previous two sections need to be deployed.
+:::note
+In order to continue, all of the cloud infrastructure additions we did in previous two sections need to be deployed.
+:::
+
+:::note
+Changes made to the [`webiny.config.ts`](#) file aren't automatically picked up by already active watch sessions, initialized with the [`webiny watch`](/docs/how-to-guides/use-watch-command) command. Before you start making any changes, make sure to terminate any active watch sessions you might have and run them again once the [`webiny.config.ts`](#) file is in the right place.
 :::
 
 The following code highlights the changes that need to be performed:
