--- a/docs/tutorials/create-custom-application/security/getting-started.mdx
+++ b/docs/tutorials/create-custom-application/security/getting-started.mdx
@@ -95,7 +95,7 @@ The React application's cloud infrastructure doesn't follow this organization, s
 
 ### Stack Output
 
-If we were to open the cloud infrastructure code that is initially included during the [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application) scaffolding process, we may notice that at the end of each entrypoint file, for example [`pinterest-clone/api/pulumi/dev/index.ts`](#), we are returning an object that consists of a couple of properties:
+If we were to open the cloud infrastructure code that is initially included during the [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application) scaffolding process, we may notice that at the end of each entrypoint file, for example in [`pinterest-clone/api/pulumi/dev/index.ts`](#), we are returning an object that consists of a couple of properties:
 
 ```ts title="pinterest-clone/api/pulumi/dev/index.ts"
 return {
@@ -106,7 +106,7 @@ return {
 };
 ```
 
-It's important to note that the returned object represents something called the **stack output**, which, essentially, enables us to expose multiple values that were created during a deployment process. These may entail unique IDs of deployed cloud infrastructure resources, maybe a URL that points to a specific resource, and basically anything else that we might need.
+It's important to note that the returned object represents something called the **cloud infrastructure stack output** or just **stack output**, which, essentially, enables us to expose multiple values that were created during a deployment process. These may entail unique IDs of deployed cloud infrastructure resources, maybe a URL that points to a specific resource, and basically anything else that we might need.
 
 The stack output can then be retrieved within cloud infrastructure or application code that is part of the same, or an entirely separate, [project application](/docs/key-topics/project-organization/project-applications). For example, if we were to open the React application's [`webiny.config.ts`](#) configuration file, located in [`pinterest-clone/app/code/webiny.config.ts`](#), we'd see that we're using the [`getStackOutput`](#) function in order to retrieve the URL over which our GraphQL API can be accessed:
 
