--- a/docs/tutorials/create-custom-application/serverless-application-development.mdx
+++ b/docs/tutorials/create-custom-application/serverless-application-development.mdx
@@ -95,7 +95,7 @@ Sooner or later, you'll be faced with a task that will require you to introduce 
 
 Let's end this section with the following excerpt from this [Serverless is DevOps](https://www.stackery.io/blog/erverless-is-devops/) blog post:
 
-> At a conceptual level, serverless application code and compute infrastructure become interchangeable -- as you change your code, you're fundamentally changing the underlying architecture of your application. This means that many operational concerns (latency, resiliancy, etc) need to be addressed in the development cycle, which is a great starting point for integrating development and operations from the outset.
+> At a conceptual level, serverless application code and compute infrastructure become interchangeable -- as you change your code, you're fundamentally changing the underlying architecture of your application. This means that many operational concerns (latency, resiliency, etc) need to be addressed in the development cycle, which is a great starting point for integrating development and operations from the outset.
 
 ## The Advantage of Serverless - Consumption-based Pricing
 
