--- a/docs/release-notes/5.15.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.15.0/upgrade-guide.mdx
@@ -34,7 +34,17 @@ Once the upgrade has finished, running the `yarn webiny --version` command in yo
 Before moving on, make sure you commit all your changes.
 :::
 
-## 2. Deploy Your Project
+## 2. Run the Upgrade Command
+
+The next step is to run the project upgrade:
+
+```bash
+yarn webiny upgrade
+```
+
+Once the upgrade command has finished, you can run the [`git status`](https://git-scm.com/docs/git-status) command to see all changes that the command performed.
+
+## 3. Deploy Your Project
 
 Finally, proceed by re-deploying your Webiny project:
 
