--- a/docs/tutorials/create-custom-application/security/graphql-api/implementing-authentication-and-authorization-checks.mdx
+++ b/docs/tutorials/create-custom-application/security/graphql-api/implementing-authentication-and-authorization-checks.mdx
@@ -90,7 +90,7 @@ All of the resolver functions for these mutations are located in the [`PinsMutat
 
 ## Before We Begin - A Note on Testing
 
-In the following couple of sections, we'll manually test the changes that we'll perform. Meaning, after a change has been performed, via the [GraphQL Playground](https://github.com/graphql/graphql-playground) GraphQL client, we'll manually issue queries and mutations, both as signed in and anonymous users.
+In the following couple of sections, we'll manually test the changes that we'll perform. After a change has been performed, via the [GraphQL Playground](https://github.com/graphql/graphql-playground) GraphQL client, we'll manually issue GraphQL queries and mutations, both as signed in and anonymous users.
 
 When it comes to signed-in users, in order to simulate one, we'll need to add the `authorization` header via the **HTTP Headers** tab:
 
@@ -99,13 +99,22 @@ When it comes to signed-in users, in order to simulate one, we'll need to add th
   src={gqlClientAuthHeader}
 />
 
-The value of the header is a base 64 encoded JWT token, which can be easily retrieved by signing in regularly, via the React application, opening the Network tab, picking any **POST** GraphQL HTTP request from the list of all requests, and finding the token in the **Request Headers** section:
+The value of the header is a base 64 encoded JWT token, which we should be able to easily retrieve via [Google Chrome DevTools](https://developer.chrome.com/docs/devtools/overview/).
 
-SAY IN CHROME TODO
+:::note Not using Google Chrome browser?
+Other browsers also offer their own versions of development-related tools. For example, [Firefox Browser](https://www.mozilla.org/en-US/firefox/new/) has [Firefox Developer Tools](https://developer.mozilla.org/en-US/docs/Tools). Be sure to check your browser's documentation for more information.
+:::
+
+To retrieve the token, follow these steps:
+
+- sign in to the React application with your web browser
+- open [Google Chrome DevTools](https://developer.chrome.com/docs/devtools/overview/) ([how to I open it?](https://developer.chrome.com/docs/devtools/open/))
+- in the **Network** tab, from the list of all HTTP requests, pick any **POST** request directed at our GraphQL API's URL (if you're not seeing any, simply refresh the page)
+- in the **Headers** tab, you should be able to find the token in the **Request Headers** section (`authorization` header)
 
 <CenteredImage alt={"Google Chrome - Network Tab"} src={networkTabAuthorizationToken} />
 
-Once you've found it, simply copy and paste the token into the GraphQL playground, and you should be good to go.
+Once you've found it, simply copy and paste the token into the GraphQL playground as shown in the above screenshot, and you should be good to go.
 
 <!-- Finally, for a more automated way of testing the changes that we'll perform, check out the `Testing` section of this tutorial.  -->
 
