wip: create custom application tutorial

--- a/docs/tutorials/create-custom-application/getting-started.mdx
+++ b/docs/tutorials/create-custom-application/getting-started.mdx
@@ -164,7 +164,7 @@ In contrast to [GraphQL API](/docs/tutorials/extend-admin-area/getting-started#g
 Note that we need to specify the environment via the `--env` flag, even when watching the React application. This is because the [`watch`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/02-getting-started/pinterest-clone/app/code/webiny.config.ts#L21) and [`build`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/02-getting-started/pinterest-clone/app/code/webiny.config.ts#L31) scripts need to pick up some of the values exported from GraphQL API's cloud infrastructure code, for a specific environment. For example, in order to interact with the GraphQL API, the React application needs to know its URL. Since we could potentially have our GraphQL API deployed into several environments, we need to specify it.
 
 :::tip
-When we say _scripts need to pick up some of the values exported from GraphQL API's cloud infrastructure code_, we actually mean they need to retrieve our GraphQL API project application's **stack output**. We'll revisit this term in one of the following sections, so you'll be able to get a better understanding of how it actually works.
+When we say _scripts need to pick up some of the values exported from GraphQL API's cloud infrastructure code_, we actually mean they need to retrieve our GraphQL API **stack output**. We'll revisit this term in one of the following sections, so you'll be able to get a better understanding of how it actually works.
 :::
 
 ### Final Result
