--- a/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-and-user-pool-domain.mdx
+++ b/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-and-user-pool-domain.mdx
@@ -205,6 +205,6 @@ Both approaches will ensure the new cloud infrastructure resources are deployed 
 
 ## Final Result
 
-In this section, we've defined (and deployed) a new User Pool and a User Pool Domain, all within our GraphQL API's cloud infrastructure code. Also, by adding the `cognitoUserPoolId` and `cognitoUserPoolDomain` stack output properties, we've exposed the ID and the domain of the deployed User Pool and User Pool Domain. This will enable us to later retrieve these values within our React application code and connect everything together.
+In this section, we've defined and deployed a new User Pool and a User Pool Domain, all within our GraphQL API's cloud infrastructure code. Also, by adding the `cognitoUserPoolId` and `cognitoUserPoolDomain` stack output properties, we've exposed the ID and the domain of the deployed User Pool and User Pool Domain. This will enable us to later retrieve these values within our React application code and connect everything together.
 
 In the next section, we'll still be playing with the cloud infrastructure code, but this time within our React application, where we'll need to define a new [User Pool Client](https://docs.aws.amazon.com/cognito/latest/developerguide/user-pool-settings-client-apps.html).
