wip: change "sign in into" to "sign in to"

--- a/docs/tutorials/create-custom-application/introduction.mdx
+++ b/docs/tutorials/create-custom-application/introduction.mdx
@@ -103,7 +103,7 @@ Once our GraphQL API is in place, we're ready to start working on our frontend R
 
 In this section, we show how we can secure our application by integrating [Amazon Cognito](https://aws.amazon.com/cognito/).
 
-Apart from providing a way for users to sign up and sign in into the application, we also gain the ability to tie every created pin to a user, which we'll display in the application. Last but certainly not the least, we also get to implement necessary security (authorization) checks on the GraphQL API.
+Apart from providing a way for users to sign up and sing in to the application, we also gain the ability to tie every created pin to a user, which we'll display in the application. Last but certainly not the least, we also get to implement necessary security (authorization) checks on the GraphQL API.
 
 #### File Upload (coming soon)
 
