--- a/docs/tutorials/create-custom-application/security/getting-started.mdx
+++ b/docs/tutorials/create-custom-application/security/getting-started.mdx
@@ -40,15 +40,11 @@ The code that we cover in this section can also be found in our GitHub [examples
 
 ## Authentication Flow with Amazon Cognito's Hosted UI
 
-As mentioned in the previous section, in order to perform authentication in our application, we first need to have an **authentication flow**. In other words, we need to provide a way for users to sign up and sign in into our application.
+As mentioned in the previous section, in order to perform authentication in our application, we first need to have an **authentication flow**. In other words, we need to provide a way for users to sign up and sing in to our application.
 
 An authentication flow can easily be introduced via [Amazon Cognito](https://aws.amazon.com/cognito/), by creating a new [User Pool](https://docs.aws.amazon.com/cognito/latest/developerguide/getting-started-with-cognito-user-pools.html). With it, we can implement a couple of different authentication flows, but for the purposes of this tutorial, we'll go with the easiest one, and that's [Hosted UI](https://docs.aws.amazon.com/cognito/latest/developerguide/cognito-user-pools-app-integration.html).
 
-:::info
-Other approaches
-:::
-
-With this approach, the authentication flow is completely offloaded to Amazon Cognito. Once a user wishes to sign up or sign in into our application, she/he usually clicks on a button or a link in it, which causes a redirect to the standalone hosted authentication flow. So, as mentioned, the authentication flow is happening completely outside of our application.
+With this approach, the authentication flow is completely offloaded to Amazon Cognito. Once a user wishes to sign up or sing in to our application, she/he usually clicks on a button or a link in it, which causes a redirect to the standalone hosted authentication flow. So, as mentioned, the authentication flow is happening completely outside of our application.
 
 <CenteredImage
   alt="User Authentication Flow Start"
@@ -75,11 +71,16 @@ And, one deployed as part of our React application:
 
 - **Amazon Cognito User Pool Client** - enables us to access the authentication flow from our React application and interact with Amazon Cognito HTTP API
 
+All of these will be defined within our cloud infrastructure code, which is what we'll start with, in the next section of this tutorial.
+
 :::note
 In the following sections, for the sake of brevity, we'll refer to these resources without the **Amazon Cognito** prefix: **User Pool**, **User Pool Domain**, and **User Pool Client**.
 :::
 
-All of these will be defined within our cloud infrastructure code, which is what we'll start with, in the next section of this tutorial.
+:::info
+Learn more about other types of authentication flows that Amazon Cognito offers, in its official [documentation](https://docs.aws.amazon.com/cognito/latest/developerguide/amazon-cognito-user-pools-authentication-flow.html).
+:::
+
 
 ## Before We Begin
 
