--- a/docs/tutorials/create-custom-application/security/react-application/integrating-hosted-ui-authentication-flow.mdx
+++ b/docs/tutorials/create-custom-application/security/react-application/integrating-hosted-ui-authentication-flow.mdx
@@ -166,7 +166,7 @@ Finally, by entering the correct code into the field and submitting the form, th
 
 ## Final Result
 
-With the Hosted UI authentication flow finally integrated, our users can now sign up and sign in into our application!
+With the Hosted UI authentication flow finally integrated, our users can now sign up and sing in to our application!
 
 And, by only showing the **&#10753;** icon button to signed-in users, we've restricted the anonymous users from opening the **New Pin** modal dialog and creating new pins.
 
