wip: where appropriate, use "library" instead of "package"

--- a/docs/tutorials/create-custom-application/security/graphql-api/initial-setup.mdx
+++ b/docs/tutorials/create-custom-application/security/graphql-api/initial-setup.mdx
@@ -45,15 +45,15 @@ With the Hosted UI authentication flow successfully integrated into our React ap
 First of all, we'll add two new libraries that will make it a bit easier to work with the current user within our GraphQL API code (resolver functions). Once that's in place, we will perform the following:
 
 - perform a minor update to our cloud infrastructure code
-- set up the added packages (plugins)
+- set up the added libraries (plugins)
 - perform a minor but important update to the [`Context`](#) interface
 - add new [`createdBy`](#) field to our main [`Pin`](#) GraphQL type
 
 Let's see how we can achieve all of these.
 
-## 1. Adding the Needed Packages
+## 1. Adding the Needed Libraries
 
-In order to implement the necessary authentication and authorization checks within our GraphQL API, like in the previous section, let's again start by adding a couple of new packages into the mix.
+In order to implement the necessary authentication and authorization checks within our GraphQL API, like in the previous section, let's again start by adding a couple of new libraries into the mix.
 
 #### [`@webiny/api-security`](https://github.com/webiny/webiny-js/tree/next/packages/api-security)
 
@@ -61,9 +61,9 @@ A collection of plugins that will set up the [Webiny Security Framework](https:/
 
 #### [`@webiny/api-security-cognito-authentication`](https://github.com/webiny/webiny-js/tree/next/packages/api-security-cognito-authentication)
 
-By itself, the above package doesn't do much. It's simply a framework, which is always paired with an authentication provider. In our case, we want to pair it up with the Amazon Cognito provider, which is what this package does.
+By itself, the above library doesn't do much. It's simply a framework, which is always paired with an authentication provider. In our case, we want to pair it up with the Amazon Cognito provider, which is what this library does.
 
-The following command will add both packages to our React application:
+The following command will add both libraries to our React application:
 
 ```bash
 yarn workspace pinterest-clone-api add @webiny/api-security @webiny/api-security-cognito-authentication
@@ -71,7 +71,7 @@ yarn workspace pinterest-clone-api add @webiny/api-security @webiny/api-security
 
 ## 2. Updating Cloud Infrastructure Code
 
-In order to start setting up the newly added packages, we'll first need to update our cloud infrastructure code.
+In order to start setting up the newly added libraries, we'll first need to update our cloud infrastructure code.
 
 More specifically, we'll need to pass two new environment variables to our GraphQL API handler function: `COGNITO_REGION` and `COGNITO_USER_POOL_ID`.
 
@@ -121,7 +121,7 @@ As we'll soon see, in our application code, these will be passed to our GraphQL 
 In order for the new environment variables to be available in our GraphQL API handler function, we'll need to redeploy it. If you had a watch session already up and running, this should've happened automatically. Otherwise, you'll need to either start a new session via the [`webiny watch`](/docs/how-to-guides/use-watch-command), or simply deploy the change via the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command.
 :::
 
-## 3. Setting Up the Packages (Plugins)
+## 3. Setting Up the Libraries (Plugins)
 
 Essentially, both [`@webiny/api-security`](https://github.com/webiny/webiny-js/tree/next/packages/api-security) and [`@webiny/api-security-cognito-authentication`](https://github.com/webiny/webiny-js/tree/next/packages/api-security-cognito-authentication) packages are exporting a collection of plugins, which are meant to be registered within our GraphQL API handler function:
 
@@ -199,7 +199,7 @@ The following step is not required, but it's certainly recommended because we'll
 
 If we were to open the [`pinterest-clone/api/code/graphql/src/types.ts`](#) file, in it, we'd find the [`Context`](#) interface, which we can utilize any time we're actually interacting with the handler's central `context` object. In our case, this would be within our GraphQL resolver functions, but it could also happen in different [`ContextPlugin`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/handler/src/plugins/ContextPlugin.ts#L7), [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5.15.0/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts#L10), and other plugins.
 
-So, since the newly added packages (sets of plugins) are actually modifying the `context` object by adding new properties to it, let's make sure those changes are reflected in the `Context` interface as well.
+So, since the newly added libraries (sets of plugins) are actually modifying the `context` object by adding new properties to it, let's make sure those changes are reflected in the `Context` interface as well.
 
 ```ts title="pinterest-clone/api/code/graphql/src/types.ts" {5,18}
 import { HandlerContext } from "@webiny/handler/types";
