--- a/docs/tutorials/create-custom-application/react-application/homepage.mdx
+++ b/docs/tutorials/create-custom-application/react-application/homepage.mdx
@@ -121,7 +121,7 @@ In order for the above code to work, make sure to copy and paste the [`blankImag
 Notice how we've used the tilde (`~`) character to target the parent [`images`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04-homepage/pinterest-clone/app/code/src/images) and [`components`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04-homepage/pinterest-clone/app/code/src/components) folders. Using that instead of something like `../../../` can make our import statements easier to read and maintain.
 :::
 
-As we can see, the file contains the [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04-homepage/pinterest-clone/app/code/src/plugins/routes/home.tsx#L25) React component, in which we're simply issuing the `ListPins` GraphQL query, and then, based on the received data, rendering each pin as an image and link to the **Pin Details** page (more on this soon). And, in order to achieve the mentioned mosaic layout, the pins are wrapped with the `Columned` component, imported from the added [`react-columned`](https://www.npmjs.com/package/react-columned) package.
+As we can see, the file contains the [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04-homepage/pinterest-clone/app/code/src/plugins/routes/home.tsx#L25) React component, in which we're simply issuing the `ListPins` GraphQL query, and then, based on the received data, rendering each pin as an image and link to the **Pin Details** page (more on this soon). And, in order to achieve the mentioned mosaic layout, the pins are wrapped with the `Columned` component, imported from the added [`react-columned`](https://www.npmjs.com/package/react-columned) library.
 
 Furthermore, note that, by default, the React application that's generated during the [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application) scaffolding process uses [`@webiny/react-router`](https://github.com/webiny/webiny-js/tree/next/packages/react-router) library, which is a plugins-based React application router. In other words, all of the application routes are defined via [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/v5.15.0/packages/app/src/plugins/RoutePlugin.tsx#L8) plugins, which is why we're exporting that instead of the actual [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04-homepage/pinterest-clone/app/code/src/plugins/routes/home.tsx#L25) React component:
 
