wip: apply minor rewording

--- a/docs/tutorials/create-custom-application/introduction.mdx
+++ b/docs/tutorials/create-custom-application/introduction.mdx
@@ -67,7 +67,7 @@ The goal of this tutorial is to learn how we can create a full stack application
 
 Of course, we'll be building a much simpler version of it. The application will allow users to:
 
-- sign up and log in into the application
+- sign up and sign in into the application
 - create new **pins** which will consist of three pieces of information: title, description, and a cover image
 - list and view pins created by themselves and other users
 
