--- a/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-and-user-pool-domain.mdx
+++ b/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-and-user-pool-domain.mdx
@@ -110,7 +110,7 @@ As we can see, we're first defining a new User Pool, where we're configuring som
 - enabling verification with a confirmation code (`autoVerifiedAttributes`)
 - using `email` attribute as the username (`usernameAttributes`) .
 
-Then, in order to enable the mentioned Hosted UI, we're also defining a new User Pool Domain, which only takes two configuration parameters - `domain` and `userPoolId`. Notice how we've assigned `` `pinterest-clone-${process.env.WEBINY_ENV}` `` to the former and used `process.env.WEBINY_ENV` as part of the value. With this approach, we're simply ensuring that within every environment we deploy into, we're using a globally unique domain name. We cannot use (or at least shouldn't) the same domain name within two different environments.
+Then, in order to enable the mentioned Hosted UI authentication flow, we're also defining a new User Pool Domain, which only takes two configuration parameters - `domain` and `userPoolId`. Notice how we've assigned `` `pinterest-clone-${process.env.WEBINY_ENV}` `` to the former and used `process.env.WEBINY_ENV` as part of the value. With this approach, we're simply ensuring that within every environment we deploy into, we're using a globally unique domain name. We cannot use (or at least shouldn't) the same domain name within two different environments.
 
 The next step is to import the new file in the existing [`index.ts`](#) entrypoint file, located in the [`pinterest-clone/api/pulumi/dev`](#) folder. Once imported, we'll also need to perform two additional changes.
 
